test_regress/t/t_alias_tristate_unsup.out
%Error-UNSUPPORTED: t/t_alias_tristate_unsup.v:17:9: Unsupported: Tristate variable referenced in alias: 'a'
                                                   : ... note: In instance 't'
   17 |   alias a = b;
      |         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
